// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadsDashboard reducer should handle UPLOADSDASHBOARD_CHANGE_BOOL 1`] = `
Object {
  "bool": true,
}
`;

exports[`UploadsDashboard reducer should return the initial state 1`] = `
Object {
  "bool": false,
}
`;
